update to mutatable list